added profile to about me

--- a/app/about.html
+++ b/app/about.html
@@ -18,7 +18,7 @@
     <link href="https://fonts.googleapis.com/css?family=Lora:400,400i,700,700i" rel="stylesheet">
   </head>
 
-  <body>
+  <body class="bg-light">
     <!-- Header + Nav -->
     <header class="bg-dark">
       <h1 class="site-heading text-center d-none d-lg-block">
@@ -60,6 +60,70 @@
         </nav>
       </div>
     </header>
+    <!-- Profile -->
+    <section class="my-4 p-2 mx-auto" id="profile">
+      <div class="container">
+        <div class="row">
+          <div class="col-lg-6 col-md-6 no-padding">
+            <img src="img/portrait-square.jpg" width="100%"/>
+          </div>
+          <div class="col-lg-6 col-md-6">
+            <h3 class="section-heading"><span class="thin">Hi, I'm </span><span class="text-primary thick">John Doe</span></h3>
+            <h4 class="small">Media Specialist and Something</h4>
+            <table class="table small">
+              <tr>
+                <td class="thick">Age</td>
+                <td>20</td>
+              </tr>
+              <tr>
+                <td class="thick">Location</td>
+                <td>London</td>
+              </tr>
+              <tr>
+                <td class="thick">Email</td>
+                <td>john@doe.com</td>
+              </tr>
+              <tr>
+                <td class="thick">Phone</td>
+                <td>+44 7951431677</td>
+              </tr>
+            </table>
+          </div>
+        </div>
+        <div class="row bg-dark">
+          <div class="container text-center">
+            <ul class="list-inline my-2 social-links">
+              <li class="list-inline-item">
+                <a href="">
+                  <i class="fa fa-facebook"></i>
+                </a>
+              </li>
+              <li class="list-inline-item">
+                <a href="">
+                  <i class="fa fa-twitter"></i>
+                </a>
+              </li>
+              <li class="list-inline-item">
+                <a href="">
+                  <i class="fa fa-youtube"></i>
+                </a>
+              </li>
+              <li class="list-inline-item">
+                <a href="">
+                  <i class="fa fa-instagram"></i>
+                </a>
+              </li>
+              <li class="list-inline-item">
+                <a href="">
+                  <i class="fa fa-linkedin"></i>
+                </a>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </div>
+    </section>
+
     <!-- Footer -->
     <footer class="bg-dark text-white">
       <div class="container">
