Experience and Education on about page

--- a/app/about.html
+++ b/app/about.html
@@ -65,9 +65,9 @@
       <div class="container">
         <div class="row">
           <div class="col-lg-6 col-md-6 no-padding">
-            <img src="img/portrait-square.jpg" width="100%"/>
+            <img src="img/portrait-square.jpg" width="100%" height="100%"/>
           </div>
-          <div class="col-lg-6 col-md-6">
+          <div class="col-lg-6 col-md-6 my-2">
             <h3 class="section-heading"><span class="thin">Hi, I'm </span><span class="text-primary thick">John Doe</span></h3>
             <h4 class="small">Media Specialist and Something</h4>
             <table class="table small">
@@ -123,6 +123,88 @@
         </div>
       </div>
     </section>
+    <!-- Skills -->
+    <section class="bg-dark my-4 p-3 text-white" id="disciplines">
+      <div class="container">
+        <h3 class="section-heading thin text-center">Skills</h3>
+        <hr class="bg-primary"/>
+        <div class="row">
+          <div class="col-lg-4 col-md-6 text-center">
+            <div class="discipline-box mt-5 mx-auto">
+              <i class="fa fa-4x fa-film mb-3 sr-icons"></i>
+              <h3 class="mb-3">Videography</h3>
+              <p class="text-muted mb-0">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed.</p>
+              <a class="btn btn-primary text-white my-3 sr-button">Learn More</a>
+            </div>
+          </div>
+          <div class="col-lg-4 col-md-6 text-center">
+            <div class="discipline-box mt-5 mx-auto">
+              <i class="fa fa-4x fa-camera mb-3 sr-icons"></i>
+              <h3 class="mb-3">Photography</h3>
+              <p class="text-muted mb-0">Do eiusmod tempor incididunt ut labore et dolore magna aliqua</p>
+              <a class="btn btn-primary text-white my-3 sr-button">Learn More</a>
+            </div>
+          </div>
+          <div class="col-lg-4 col-md-6 text-center">
+            <div class="discipline-box mt-5 mx-auto">
+              <i class="fa fa-4x fa-headphones mb-3 sr-icons"></i>
+              <h3 class="mb-3">Audio Engineering</h3>
+              <p class="text-muted mb-0">Ut enim ad minim veniam, quis nostrud exercitatio</p>
+              <a class="btn btn-primary text-white my-3 sr-button">Learn More</a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- Education + Experience-->
+    <section class="bg-light" id="education">
+      <div class="container">
+        <h3 class="section-heading thin text-center">Education & Experience</h3>
+        <hr class="bg-primary"/>
+        <ul class="timeline timeline-horizontal">
+          <li class="timeline-item sr-contact">
+            <div class="timeline-badge bg-primary"><i class="fa fa-graduation-cap"></i></div>
+            <div class="timeline-panel">
+              <div class="timeline-heading">
+                <h4 class="timeline-title">Foobar College</h4>
+                <p class="text-muted">A Levels</p>
+                <p class="text-muted small">2014 - 2016</p>
+              </div>
+              <div class="timeline-body">
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqu</p>
+              </div>
+            </div>
+          </li>
+          <li class="timeline-item sr-contact">
+            <div class="timeline-badge bg-primary"><i class="fa fa-graduation-cap"></i></div>
+            <div class="timeline-panel">
+              <div class="timeline-heading">
+                <h4 class="timeline-title">Foobaz University</h4>
+                <p class="text-muted">BA Media Studies</p>
+                <p class="text-muted small">2016 - 2019</p>
+              </div>
+              <div class="timeline-body">
+                <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat</p>
+              </div>
+            </div>
+          </li>
+          <li class="timeline-item sr-contact">
+            <div class="timeline-badge bg-primary"><i class="fa fa-briefcase"></i></div>
+            <div class="timeline-panel">
+              <div class="timeline-heading">
+                <h4 class="timeline-title">Media Company Inc</h4>
+                <p class="text-muted ">Digital Marketing Manager</p>
+                <p class="text-muted small">2019 - Current</p>
+              </div>
+              <div class="timeline-body">
+                <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque</p>
+              </div>
+            </div>
+          </li>
+        </ul>
+      </div>
+    </section>
+    <!-- Experience -->
 
     <!-- Footer -->
     <footer class="bg-dark text-white">
