changes to contrasting on about page

--- a/app/about.html
+++ b/app/about.html
@@ -18,7 +18,7 @@
     <link href="https://fonts.googleapis.com/css?family=Lora:400,400i,700,700i" rel="stylesheet">
   </head>
 
-  <body class="bg-light">
+  <body>
     <!-- Header + Nav -->
     <header class="bg-dark">
       <h1 class="site-heading text-center d-none d-lg-block">
@@ -124,7 +124,7 @@
       </div>
     </section>
     <!-- Skills -->
-    <section class="bg-dark my-4 p-3 text-white" id="disciplines">
+    <section class="bg-light my-4 p-3" id="disciplines">
       <div class="container">
         <h3 class="section-heading thin text-center">Skills</h3>
         <hr class="bg-primary"/>
@@ -157,11 +157,11 @@
       </div>
     </section>
     <!-- Education + Experience-->
-    <section class="bg-light" id="education">
+    <section  id="education">
       <div class="container">
         <h3 class="section-heading thin text-center">Education & Experience</h3>
         <hr class="bg-primary"/>
-        <ul class="timeline timeline-horizontal">
+        <ul class="timeline my-3">
           <li class="timeline-item sr-contact">
             <div class="timeline-badge bg-primary"><i class="fa fa-graduation-cap"></i></div>
             <div class="timeline-panel">
