added frontend for contact page

--- a/app/about.html
+++ b/app/about.html
@@ -46,13 +46,13 @@
                 <li class="nav-item dropdown px-lg-4">
                   <a class="nav-link text-uppercase text-expanded dropdown-toggle" href="#" role="button" data-toggle="dropdown">Projects</a>
                   <div class="dropdown-menu">
-                    <a class="dropdown-item" href="#">Videography</a>
-                    <a class="dropdown-item" href="#">Photography</a>
-                    <a class="dropdown-item" href="#">Audio Engineering</a>
+                    <a class="dropdown-item" href="projects.html#Videography">Videography</a>
+                    <a class="dropdown-item" href="projects.html#Photography">Photography</a>
+                    <a class="dropdown-item" href="projects.html#Audio_Engineering">Audio Engineering</a>
                   </div>
                 </li>
                 <li class="nav-item px-lg-4">
-                  <a class="nav-link text-uppercase text-expanded" href="#">Contact</a>
+                  <a class="nav-link text-uppercase text-expanded" href="contact.html">Contact</a>
                 </li>
               </ul>
             </div>
@@ -157,7 +157,7 @@
       </div>
     </section>
     <!-- Education + Experience-->
-    <section  id="education">
+    <section class="my-4" id="education">
       <div class="container">
         <h3 class="section-heading thin text-center">Education & Experience</h3>
         <hr class="bg-primary"/>
