addded CV download button

--- a/app/contact.html
+++ b/app/contact.html
@@ -126,6 +126,9 @@
                 </li>
               </ul>
             </div>
+            <div class="container my-4">
+              <button class="btn btn-primary" href="#"><i class="fa fa-download mr-3"></i>Download CV</button>
+            </div>
           </div>
         </div>
       </div>
