--- a/app/404-page.html
+++ b/app/404-page.html
@@ -1,4 +1,3 @@
-<?php session_start() ?>
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -8,7 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <meta name="author" content="Rhys Evans">
 
-    <title>John Doe</title>
+    <title>Page Not Found</title>
 
     <link rel='shortcut icon' type='image/x-icon' href='favicon.ico'/>
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -36,10 +35,8 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarResponsive">
               <ul class="navbar-nav mx-auto">
-                <li class="nav-item active px-lg-4">
-                  <a class="nav-link text-uppercase text-expanded" href="#">Home
-                    <span class="sr-only">(current)</span>
-                  </a>
+                <li class="nav-item px-lg-4">
+                  <a class="nav-link text-uppercase text-expanded" href="index.php">Home</a>
                 </li>
                 <li class="nav-item px-lg-4">
                   <a class="nav-link text-uppercase text-expanded" href="about.html">About Me</a>
@@ -61,44 +58,23 @@
         </nav>
       </div>
     </header>
-    <!-- Intro -->
-    <section class="page-section clearfix" id="intro">
-      <div class="container intro-wrapper">
-        <div class="intro text-white">
-          <div id="introCarousel" class="intro-img img-fluid mb-3 mb-lg-0 rounded carousel slide" data-ride"carousel">
-            <!-- Indicators -->
-            <ul class="carousel-indicators">
-              <li data-target="#introCarousel" data-slide-to="0" class="active"></li>
-              <li data-target="#introCarousel" data-slide-to="1"></li>
-              <li data-target="#introCarousel" data-slide-to="2"></li>
-            </ul>
 
-            <div class="carousel-inner">
-              <div class="carousel-item active">
-                <img src="img/portrait1.jpg" alt="">
-              </div>
-              <div class="carousel-item">
-                <img src="img/portrait2.jpg" alt="">
-              </div>
-              <div class="carousel-item">
-                <img src="img/portrait3.jpg" alt="">
-              </div>
-            </div>
-          </div>
-          <div class="intro-text left-0 text-center bg-faded p-5 rounded">
-            <h2 class="section-heading mb-4">
-              <span class="section-heading-upper">Introduction</span>
-              <span class="section-heading-lower">Welcome</span>
-            </h2>
-            <p class="mb-3">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi
-            </p>
-            <div class="intro-button mx-auto">
-              <a class="btn btn-primary btn-lg" href="about.html">Learn More</a>
+    <!-- 404 Message -->
+    <section class="bg-light">
+      <div class="container">
+        <div class="row align-items-center">
+          <div class="col-lg-8 order-lg-1 mx-auto text-center">
+            <div class="p-5">
+              <h1 class="display-1 important my-4">404</h2>
+              <h2 class="display-5 my-4 section-heading">Sorry, This Page Was Not Found</h2>
+              <p class="text-muted my-4">Either something went wrong or the page doesn't exist anymore</p>
+              <a class="btn btn-xl btn-primary my-4" href="/">Home Page</a>
             </div>
           </div>
         </div>
       </div>
     </section>
+
     <!-- Footer -->
     <footer class="bg-dark text-white">
       <div class="container">
@@ -145,7 +121,6 @@
         </div>
       </div>
     </footer>
-
     <!-- Javascript -->
     <script src="vendor/jquery/jquery.min.js"></script>
     <script src="vendor/jquery-easing/jquery.easing.min.js"></script>
