--- a/app/projects.html
+++ b/app/projects.html
@@ -52,7 +52,7 @@
                   </div>
                 </li>
                 <li class="nav-item px-lg-4">
-                  <a class="nav-link text-uppercase text-expanded" href="contact.html">Contact</a>
+                  <a class="nav-link text-uppercase text-expanded" href="contact.php">Contact</a>
                 </li>
               </ul>
             </div>
