--- a/app/projects.html
+++ b/app/projects.html
@@ -60,6 +60,111 @@
         </nav>
       </div>
     </header>
+
+    <!-- Projects -->
+    <div class="container p-3">
+
+      <h3 class="section-heading thin mb-4 text-center">Projects</h3>
+      <hr class="bg-primary"/>
+
+      <!-- Videography Projects -->
+      <section id="Videography">
+        <h5 class="section-heading thin mb-4">Videography Projects</h5>
+
+        <!-- Project 1 -->
+        <div class="row my-4">
+          <div class="col-md-7">
+            <a href="#">
+              <img class="img-fluid rounded mb-3 mb-md-0" src="http://placehold.it/700x300" alt="">
+            </a>
+          </div>
+          <div class="col-md-5">
+            <h3>Project One</h3>
+            <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laudantium veniam exercitationem expedita laborum at voluptate. Labore, voluptates totam at aut nemo deserunt rem magni pariatur quos perspiciatis atque eveniet unde.</p>
+            <a class="btn btn-primary" href="#">Learn More</a>
+          </div>
+        </div>
+        <!-- Project 2 -->
+        <div class="row my-4">
+          <div class="col-md-7">
+            <a href="#">
+              <img class="img-fluid rounded mb-3 mb-md-0" src="http://placehold.it/700x300" alt="">
+            </a>
+          </div>
+          <div class="col-md-5">
+            <h3>Project Two</h3>
+            <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laudantium veniam exercitationem expedita laborum at voluptate. Labore, voluptates totam at aut nemo deserunt rem magni pariatur quos perspiciatis atque eveniet unde.</p>
+            <a class="btn btn-primary" href="#">Learn More</a>
+          </div>
+        </div>
+      </section>
+
+      <!-- Photography Projects -->
+      <section id="Photography" class="my-5">
+        <h5 class="section-heading thin mb-4">Photography Projects</h5>
+
+        <!-- Project 1 -->
+        <div class="row my-4">
+          <div class="col-md-7">
+            <a href="#">
+              <img class="img-fluid rounded mb-3 mb-md-0" src="http://placehold.it/700x300" alt="">
+            </a>
+          </div>
+          <div class="col-md-5">
+            <h3>Project One</h3>
+            <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laudantium veniam exercitationem expedita laborum at voluptate. Labore, voluptates totam at aut nemo deserunt rem magni pariatur quos perspiciatis atque eveniet unde.</p>
+            <a class="btn btn-primary" href="#">Learn More</a>
+          </div>
+        </div>
+        <!-- Project 2 -->
+        <div class="row my-4">
+          <div class="col-md-7">
+            <a href="#">
+              <img class="img-fluid rounded mb-3 mb-md-0" src="http://placehold.it/700x300" alt="">
+            </a>
+          </div>
+          <div class="col-md-5">
+            <h3>Project Two</h3>
+            <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laudantium veniam exercitationem expedita laborum at voluptate. Labore, voluptates totam at aut nemo deserunt rem magni pariatur quos perspiciatis atque eveniet unde.</p>
+            <a class="btn btn-primary" href="#">Learn More</a>
+          </div>
+        </div>
+      </section>
+
+      <!-- Audio Engineering Projects -->
+      <section id="Audio_Engineering" class="my-5">
+        <h5 class="section-heading thin mb-4">Audio Engineering Projects</h5>
+
+        <!-- Project 1 -->
+        <div class="row my-4">
+          <div class="col-md-7">
+            <a href="#">
+              <img class="img-fluid rounded mb-3 mb-md-0" src="http://placehold.it/700x300" alt="">
+            </a>
+          </div>
+          <div class="col-md-5">
+            <h3>Project One</h3>
+            <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laudantium veniam exercitationem expedita laborum at voluptate. Labore, voluptates totam at aut nemo deserunt rem magni pariatur quos perspiciatis atque eveniet unde.</p>
+            <a class="btn btn-primary" href="#">Learn More</a>
+          </div>
+        </div>
+        <!-- Project 2 -->
+        <div class="row my-4">
+          <div class="col-md-7">
+            <a href="#">
+              <img class="img-fluid rounded mb-3 mb-md-0" src="http://placehold.it/700x300" alt="">
+            </a>
+          </div>
+          <div class="col-md-5">
+            <h3>Project Two</h3>
+            <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laudantium veniam exercitationem expedita laborum at voluptate. Labore, voluptates totam at aut nemo deserunt rem magni pariatur quos perspiciatis atque eveniet unde.</p>
+            <a class="btn btn-primary" href="#">Learn More</a>
+          </div>
+        </div>
+      </section>
+
+    </div>
+
     <!-- Footer -->
     <footer class="bg-dark text-white">
       <div class="container">
