Added dist jtask and replaced some stock images

--- a/app/about.html
+++ b/app/about.html
@@ -134,7 +134,7 @@
               <i class="fa fa-4x fa-film mb-3 sr-icons"></i>
               <h3 class="mb-3">Videography</h3>
               <p class="text-muted mb-0">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed.</p>
-              <a class="btn btn-primary text-white my-3 sr-button" href="projects.html#Videography">Learn More</a>
+              <a class="btn btn-primary text-white my-3 sr-button" href="projects.html#Videography">View Work</a>
             </div>
           </div>
           <div class="col-lg-4 col-md-6 text-center">
@@ -142,7 +142,7 @@
               <i class="fa fa-4x fa-camera mb-3 sr-icons"></i>
               <h3 class="mb-3">Photography</h3>
               <p class="text-muted mb-0">Do eiusmod tempor incididunt ut labore et dolore magna aliqua</p>
-              <a class="btn btn-primary text-white my-3 sr-button" href="projects.html#Photography">Learn More</a>
+              <a class="btn btn-primary text-white my-3 sr-button" href="projects.html#Photography">View Work</a>
             </div>
           </div>
           <div class="col-lg-4 col-md-6 text-center">
@@ -150,7 +150,7 @@
               <i class="fa fa-4x fa-headphones mb-3 sr-icons"></i>
               <h3 class="mb-3">Audio Engineering</h3>
               <p class="text-muted mb-0">Ut enim ad minim veniam, quis nostrud exercitatio</p>
-              <a class="btn btn-primary text-white my-3 sr-button" href="projects.html#Audio_Engineering">Learn More</a>
+              <a class="btn btn-primary text-white my-3 sr-button" href="projects.html#Audio_Engineering">View Work</a>
             </div>
           </div>
         </div>
