Added stock images to project template

--- a/app/projects.html
+++ b/app/projects.html
@@ -75,11 +75,11 @@
         <div class="row my-4">
           <div class="col-md-7">
             <a href="#">
-              <img class="img-fluid rounded mb-3 mb-md-0" src="http://placehold.it/700x300" alt="">
+              <img class="img-fluid rounded mb-3 mb-md-0" src="./img/videography-project-thumb-1.jpg" alt="">
             </a>
           </div>
           <div class="col-md-5">
-            <h3>Project One</h3>
+            <h3>A Videography Project</h3>
             <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laudantium veniam exercitationem expedita laborum at voluptate. Labore, voluptates totam at aut nemo deserunt rem magni pariatur quos perspiciatis atque eveniet unde.</p>
             <a class="btn btn-primary" href="#">Learn More</a>
           </div>
@@ -88,11 +88,11 @@
         <div class="row my-4">
           <div class="col-md-7">
             <a href="#">
-              <img class="img-fluid rounded mb-3 mb-md-0" src="http://placehold.it/700x300" alt="">
+              <img class="img-fluid rounded mb-3 mb-md-0" src="./img/videography-project-thumb-2.jpg" alt="">
             </a>
           </div>
           <div class="col-md-5">
-            <h3>Project Two</h3>
+            <h3>Another Videography Project</h3>
             <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laudantium veniam exercitationem expedita laborum at voluptate. Labore, voluptates totam at aut nemo deserunt rem magni pariatur quos perspiciatis atque eveniet unde.</p>
             <a class="btn btn-primary" href="#">Learn More</a>
           </div>
@@ -107,11 +107,11 @@
         <div class="row my-4">
           <div class="col-md-7">
             <a href="#">
-              <img class="img-fluid rounded mb-3 mb-md-0" src="http://placehold.it/700x300" alt="">
+              <img class="img-fluid rounded mb-3 mb-md-0" src="./img/photography-project-thumb-1.jpg" alt="">
             </a>
           </div>
           <div class="col-md-5">
-            <h3>Project One</h3>
+            <h3>A Photography Project</h3>
             <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laudantium veniam exercitationem expedita laborum at voluptate. Labore, voluptates totam at aut nemo deserunt rem magni pariatur quos perspiciatis atque eveniet unde.</p>
             <a class="btn btn-primary" href="#">Learn More</a>
           </div>
@@ -120,11 +120,11 @@
         <div class="row my-4">
           <div class="col-md-7">
             <a href="#">
-              <img class="img-fluid rounded mb-3 mb-md-0" src="http://placehold.it/700x300" alt="">
+              <img class="img-fluid rounded mb-3 mb-md-0" src="./img/photography-project-thumb-2.jpg" alt="">
             </a>
           </div>
           <div class="col-md-5">
-            <h3>Project Two</h3>
+            <h3>Another Photography Project</h3>
             <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laudantium veniam exercitationem expedita laborum at voluptate. Labore, voluptates totam at aut nemo deserunt rem magni pariatur quos perspiciatis atque eveniet unde.</p>
             <a class="btn btn-primary" href="#">Learn More</a>
           </div>
@@ -139,11 +139,11 @@
         <div class="row my-4">
           <div class="col-md-7">
             <a href="#">
-              <img class="img-fluid rounded mb-3 mb-md-0" src="http://placehold.it/700x300" alt="">
+              <img class="img-fluid rounded mb-3 mb-md-0" src="./img/audio-engineering-project-thumb-1.jpg" alt="">
             </a>
           </div>
           <div class="col-md-5">
-            <h3>Project One</h3>
+            <h3>An Audio Engineering Project</h3>
             <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laudantium veniam exercitationem expedita laborum at voluptate. Labore, voluptates totam at aut nemo deserunt rem magni pariatur quos perspiciatis atque eveniet unde.</p>
             <a class="btn btn-primary" href="#">Learn More</a>
           </div>
@@ -152,11 +152,11 @@
         <div class="row my-4">
           <div class="col-md-7">
             <a href="#">
-              <img class="img-fluid rounded mb-3 mb-md-0" src="http://placehold.it/700x300" alt="">
+              <img class="img-fluid rounded mb-3 mb-md-0" src="./img/audio-engineering-project-thumb-2.jpg" alt="">
             </a>
           </div>
           <div class="col-md-5">
-            <h3>Project Two</h3>
+            <h3>Another Audio Engineering Project</h3>
             <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laudantium veniam exercitationem expedita laborum at voluptate. Labore, voluptates totam at aut nemo deserunt rem magni pariatur quos perspiciatis atque eveniet unde.</p>
             <a class="btn btn-primary" href="#">Learn More</a>
           </div>
