tweaks for finish

--- a/app/projects.html
+++ b/app/projects.html
@@ -64,12 +64,9 @@
     <!-- Projects -->
     <div class="container p-3">
 
-      <h3 class="section-heading thin mb-4 text-center">Projects</h3>
-      <hr class="bg-primary"/>
-
       <!-- Videography Projects -->
-      <section id="Videography">
-        <h5 class="section-heading thin mb-4">Videography Projects</h5>
+      <section id="Videography" class="my-5">
+        <h3 class="section-heading thin mb-4">Videography Projects</h3>
 
         <!-- Project 1 -->
         <div class="row my-4">
@@ -101,7 +98,7 @@
 
       <!-- Photography Projects -->
       <section id="Photography" class="my-5">
-        <h5 class="section-heading thin mb-4">Photography Projects</h5>
+        <h3 class="section-heading thin mb-4">Photography Projects</h3>
 
         <!-- Project 1 -->
         <div class="row my-4">
@@ -133,7 +130,7 @@
 
       <!-- Audio Engineering Projects -->
       <section id="Audio_Engineering" class="my-5">
-        <h5 class="section-heading thin mb-4">Audio Engineering Projects</h5>
+        <h3 class="section-heading thin mb-4">Audio Engineering Projects</h3>
 
         <!-- Project 1 -->
         <div class="row my-4">
